gameManagerを更新しました

--- a/README.jp
+++ b/README.jp
@@ -1,7 +1,10 @@
-SamurAI 3x3 ゲーム管理システム (2015-11-24)
+SamurAI 3x3 ゲーム管理システム (2016-01-06)
+
+オプション指定方法や出力形式が変更されました。
+サムライのAIとの通信インタフェースには変更がありません。
 
 このディレクトリには SamurAI 3x3 のゲーム管理システムのソースコードと
-設定例、および、プレイヤの例が入っています。
+プレイヤの例、および起動例のスクリプトが入っています。
 
 1. 問題の報告と改良の要請
 
@@ -28,36 +31,45 @@ SamurAI 3x3 ゲーム管理システム (2015-11-24)
 
 4. システムの動かし方
 
-ゲーム管理システムは標準入力からゲーム設定情報を読み込んで、標準出力に
-ゲームのログを書き出します。ゲームのログは別の visualizer プログラムで
-グラフィカルに見ることができます。
+ゲーム管理システムはコマンドラインオプションに指定したサムライの AI プ
+ログラムが戦うゲームを実行し、標準出力にゲームのログを書き出します。ゲー
+ムのログは別の visualizer プログラムでグラフィカルに見ることができます。
 
-設定例のファイルはサブディレクトリ"setting" の中にあります。お使いの環
-境に合わせていくらか修正する必要があるかもしれません。詳しくはサブディ
-レクトリ "setting" の中の "README"ファイルをお読みください。
+システムを起動するコマンドの例がシェルスクリプト "testmatch.sh" にありま
+す。これはサンプルのプレイヤ同士を戦わせるプレイヤになっています。
 
-システムを起動するコマンドは以下のようなものです。
-   # manager/gameManager <setting/setting >logfile
+ゲーム管理システムにはいくつかのオプションがあり、そのうちのいくつかは
+指定が必須です。
 
-ゲーム管理システムにはいくつかのオプションがあります。
+   -h: ヘルプを出力。
 
-  -h: ヘルプ
-  -a<path>: プレイヤの AI へのメッセージのログをファイルに出力します。
-　　N 番目のプレイヤへのメッセージは <path> と N とをつなげたファイル
-  　名前のファイルに出力されます。
-  　たとば、"-ainput" と指定すれば、"input0" から "input5" までのファ
-  　イルができます。
-  　このオプションは、AI プログラムのデバッグに使えます。
-  　ゲーム管理システムをこのオプションをつけて動かした後、
-　　あなたの AI プログラムにメッセージのログを標準入力として与えれば、
-　　そのプログラムだけをデバッグすることができます。
-  -d: ゲームの進行状況をダンプします。
-　　これは主としてゲーム管理システムのデバッグのためのものです。
-  -D<path>: ゲームの進行状況を指定ファイルにダンプします。
-  -r: game result report output
-    Currently this option is not supported.
-    This option is planned to be used when the game system is
-    run as a part of tournament management system.
+ AI プログラムの起動と制御のオプション:
+   -a <command>: AI 起動のコマンドを設定、
+   -p <command>: AI 一時停止のコマンドを設定、
+   -u <command>: AI 実行再開のコマンドを設定。
+   オプション -a, -p, -u は６人のサムライすべてに指定が必要です。
+   オプションを適用するサムライはオプションの指定順で決まります。
+   つまり、最初の -a オプションは id 0 のサムライの起動コマンドを、
+   次の -a は id 1 のサムライの起動コマンドを、といった具合です。
+
+ ログに情報を渡すためのオプション:
+   -n <nickname>: AI のニックネーム
+   -s <score>: AI のこのゲーム前までの総得点
+   -r <rank>: AI のこのゲーム前までの順位
+   オプション -n, -s, -r を適用するサムライはオプションの指定順です。
+   これらのオプションは指定がなければデフォルト値が使われます。
+
+ デバッグのためのオプション:
+   -l <path>: ゲームのログを指定パスに出力、
+   -d <path>: AI プログラムへの通信の出力。
+        Output path to player N is concatenation of <path> and N.
+	サムライ N への出力は <path> の後に N をつけたファイルです。
+	たとえば <path> が "dump" なら、出力は dump0 から dump5
+	というファイルになりあす。
+
+  出力オプション:
+   -t: JSON 形式ではなく、プレインテキストでの出力を指定。
+
 
 5. プレイヤの例
 
